--- a/www/www/src/main/resources/templates/index.html
+++ b/www/www/src/main/resources/templates/index.html
@@ -2,9 +2,14 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{layout::setFragment(~{this::content})}">
     <th:block th:fragment="content">
-        <div class="mt-4 p-5 bg-primary text-white rounded">
-            <h1>Why Spring Boot?</h1>
-            <p>index</p>
+
+        <div class="slide">
+            <div class="slide-item item1"></div>
+            <div class="slide-item item2"></div>
+            <div class="slide-item item3"></div>
+            <div class="slide-item item4"></div>
+            <div class="slide-item item5"></div>
         </div>
+
     </th:block>
 </th:block>
