--- a/www/www/src/main/resources/templates/layout.html
+++ b/www/www/src/main/resources/templates/layout.html
@@ -8,58 +8,98 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
         <title>PetCare</title>
         <link rel="stylesheet" th:href="@{/dist/css/bootstrap.min.css}">
         <script th:src="@{/dist/js/bootstrap.bundle.min.js}"></script>
+
+        <link rel="stylesheet" th:href="@{dist/css/header.css}">
+        <link rel="stylesheet" th:href="@{dist/css/footer.css}">
+
     </head>
+
+
     <body>
-    <div class="container-sm">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/">Spring</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/">Home</a>
-                    </li>
-                    <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link" th:href="@{/board/register}">글쓰기</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" th:href="@{/board/list}">게시글</a>
-                    </li>
-                    <li class="nav-item" sec:authorize="isAnonymous()">
-                        <a class="nav-link" th:href="@{/member/register}">회원가입</a>
-                    </li>
-                    <li class="nav-item" sec:authorize="isAnonymous()">
-                        <a class="nav-link" th:href="@{/member/login}">로그인</a>
-                    </li>
-                    <li class="nav-item" sec:authorize="hasAnyAuthority('ROLE_ADMIN')">
-                        <a class="nav-link" th:href="@{/member/list}">회원리스트</a>
-                    </li>
-                    <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link" th:href="@{/member/modify}"
-                           th:with="auth=${#authentication.getPrincipal()}"
-                           th:text="${auth.mvo.nickName}"></a>
-                        <!--th:text="${#authentication.name}"-->
-                    </li>
-                    <li class="nav-item" sec:authorize="isAuthenticated()">
-                        <a class="nav-link" href="" id="logoutLink">로그아웃</a>
-                        <form action="/member/logout" method="post" id="logoutForm"></form>
-                    </li>
-                </ul>
+    <!-- header line -->
+    <header>
+        <div class="maingroup">
+            <div class="petMangaer">
+                펫 메니저 지원
+            </div>
+
+            <div class="Logo">
+                <img th:src="@{/dist/image/petMainLogo.jpg}" alt="No image">
+            </div>
+
+            <div class="group">
+                <div class="Login">Login</div>
+                <div class="padding">/</div>
+                <div class="Join">Join</div>
+                <div class="padding">/</div>
+                <div class="Mypage">마이페이지</div>
             </div>
         </div>
-    </nav>
+    </header>
+    <div class="nav">
+        <div class="group1">
+            <ul>
+                <li><a href="">산책</a></li>
+                <li><a href="">케어서비스</a></li>
+                <li><a href="">훈련서비스</a></li>
+                <li><a href="">정기케어</a></li>
+                <li><a href="">스토어</a></li>
+                <li><a href="">COMMUNITY</a></li>
+            </ul>
+        </div>
+    </div>
 
+
+
+
+
+
+
+
+    <!-- body line -->
     <div class="container-fluid">
         <th:block th:replace="${content}"></th:block>
     </div>
 
-    <div>
-        <p style="margin-top:20px"> CopyRight 2024 by Company </p>
-    </div>
-    </div>
+
+
+
+
+
+
+
+    <!-- footer line -->
+    <footer>
+        <ul style>
+            <li class>
+                <p>
+                    (주) 브아이팻 대표이사:레이트| 사업장주소:서울 구로구 디지털로 30길 28(마리오 타워)821호/세종특별시 조치원읍 세종로 229,3층 305호(세종창업키움센터)
+                </p>
+            </li>
+            <li>
+                <p>
+                    사업자 등록번호 203-81-66522|대표번호:02-890-0788
+                </p>
+            </li>
+            <li>
+                <p>
+                    (주) 브이아이펫으 모든 콘텐츠는(영상,사진,등) 저작권법의 보호를 받는 바 무단 전재 복사 배포 등을 금합니다.
+                </p>
+            </li>
+        </ul>
+
+        <button type="button" class="mainBtn" >메인 홈페이지</button>
+
+    </footer>
+
+
+
+
+
+
+
+
+
 
     <script>
         document.getElementById('logoutLink').addEventListener('click',(e)=>{
@@ -68,6 +108,8 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
             document.getElementById('logoutForm').submit();
         })
     </script>
+
+
 
     </body>
 </th:block>
