--- a/www/www/src/main/resources/templates/index.html
+++ b/www/www/src/main/resources/templates/index.html
@@ -3,6 +3,7 @@
 <th:block th:replace="~{layout::setFragment(~{this::content})}">
     <th:block th:fragment="content">
         <div class="mt-4 p-5 bg-primary text-white rounded">
+            <h1>어서오세요 vip pet shop</h1>
         </div>
     </th:block>
 </th:block>
