--- a/www/www/src/main/resources/templates/layout.html
+++ b/www/www/src/main/resources/templates/layout.html
@@ -8,6 +8,8 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
         <title>스프링 부트</title>
         <link rel="stylesheet" th:href="@{/dist/css/bootstrap.min.css}">
         <script th:src="@{/dist/js/bootstrap.bundle.min.js}"></script>
+        <link rel="stylesheet" th:href="@{/dist/css/fotter.css}">
+
     </head>
     <body>
     <div class="container-sm">
@@ -55,8 +57,33 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <div class="container-fluid">
         <th:block th:replace="${content}"></th:block>
     </div>
+        <div class="fotter">
+            <ul style>
+                <li class>
+                    <p>
+                        (주) 브아이팻 대표이사:레이트| 사업장주소:서울 구로구 디지털로 30길 28(마리오 타워)821호/세종특별시 조치원읍 세종로 229,3층 305호(세종창업키움센터)
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        사업자 등록번호 203-81-66522|대표번호:02-890-0788
+                    </p>
+                </li>
+                <li>
+                    <p>
+                        (주) 브이아이펫으 모든 콘텐츠는(영상,사진,등) 저작권법의 보호를 받는 바 무단 전재 복사 배포 등을 금합니다.
+                    </p>
+                </li>
+            </ul>
+            <!--이버튼을 누르면 메인 페이로 가게 하기 a 태그 씌어서 하게-->
+            <button type="button" class="mainBtn" >메인 홈페이지로 돌아가기</button>
+            <!--확인-->
         </div>
+        <!--푸터 부분 끝-->
+
     </div>
+    <!--푸터 부분-->
+
 
     <script>
         document.getElementById('logoutLink').addEventListener('click',(e)=>{
