--- a/www/www/src/main/resources/templates/index.html
+++ b/www/www/src/main/resources/templates/index.html
@@ -4,6 +4,10 @@
     <th:block th:fragment="content">
         <div class="mt-4 p-5 bg-primary text-white rounded">
             <h1>어서오세요 vip pet shop</h1>
+            <h1>어서오세요 vip pet shop</h1>
+            <h1>어서오세요 vip pet shop</h1>
+            <h1>어서오세요 vip pet shop</h1>
+            <h1>어서오세요 vip pet shop</h1>
         </div>
     </th:block>
 </th:block>
