--- a/www/www/src/main/resources/templates/index.html
+++ b/www/www/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{layout::setFragment(~{this::content})}">
     <th:block th:fragment="content">
-
+        test
         <div class="slide">
             <div class="slide-item item1"></div>
             <div class="slide-item item2"></div>
