--- a/www/www/src/main/resources/templates/information.html
+++ b/www/www/src/main/resources/templates/information.html
@@ -2,63 +2,69 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{layout::setFragment(~{this::content})}">
     <th:block th:fragment="content">
-        <link rel="stylesheet" th:href="@{/dist/css/teacher.css}">
-        <script th:src="@{/js/teacher.js}"></script>
-        <form action="/test/information">
-        <h1>자랑스러운 우리 선생님들을 소개합니다</h1>
-        <div class="container">
-            <div class="big_teacher">
-                큰이미지 선생님 사진 들어 갈곳 입니다
-                <p>하이하이하하이하이</p>
+<head>
+    <link rel="stylesheet" th:href="@{/dist/css/teacher.css}">
+    <script th:src="@{/js/teacher.js}"></script>
+</head>
+<body>
+
+<div class="container">
+    <h1>펫 케어 전문가님들을 소개합니다</h1>
+    <div class="big_teacher" id="big_teacher">
+        <div class="mainImage" id="mainImage">
+            <!-- 클릭한 이미지가 이곳에 크게 표시됩니다 -->
+        </div>
+        <p id="text"></p>
+        <p>선생님을 선택해보세요<p>
+    </div>
+    <div class="min_teacher">
+        <div class="teacher" onclick="showBigImage('/dist/image/강아지3.jpg', '안녕하세요 저는 누구입니다<br>저의 경력은 강아지 키우기 몇년<br>고양이 키우기 몇년 입니다<br>당신의 소중한 가족 저한테 맡겨주세요')">
+            <div class="image_box">
+                <img class="image" th:src="@{/dist/image/강아지3.jpg}">
             </div>
-            <div class="min_teacher">
-                <div class="teacher">
-                    <div class="image_box">
-                        <img class="image" th:src="@{/dist/image/강아지3.jpg}">
-                    </div>
-                    <div class="text_box">
-                        <p>안녕하세요 저는 누구입니다</p>
-                        <p>저의 경력은 강아지 키우기 몇년</p>
-                        <p>고양이 키우기 몇년 입니다</p>
-                        <p>당신의 소중한 가족 저한테 맡겨주세요</p>
-                    </div>
-                </div>
-                <div class="teacher">
-                    <div class="image_box">
-                        <img class="image" th:src="@{/dist/image/강아지3.jpg}">
-                    </div>
-                    <div class="text_box">
-                        <p>안녕하세요 저는 누구입니다</p>
-                        <p>저의 경력은 강아지 키우기 몇년</p>
-                        <p>고양이 키우기 몇년 입니다</p>
-                        <p>당신의 소중한 가족 저한테 맡겨주세요</p>
-                    </div>
-                </div>
-                <div class="teacher">
-                    <div class="image_box">
-                        <img class="image" th:src="@{/dist/image/강아지3.jpg}">
-                    </div>
-                    <div class="text_box">
-                        <p>안녕하세요 저는 누구입니다</p>
-                        <p>저의 경력은 강아지 키우기 몇년</p>
-                        <p>고양이 키우기 몇년 입니다</p>
-                        <p>당신의 소중한 가족 저한테 맡겨주세요</p>
-                    </div>
-                </div>
-                <div class="teacher">
-                    <div class="image_box">
-                        <img class="image" th:src="@{/dist/image/강아지3.jpg}">
-                    </div>
-                    <div class="text_box">
-                        <p>안녕하세요 저는 누구입니다</p>
-                        <p>저의 경력은 강아지 키우기 몇년</p>
-                        <p>고양이 키우기 몇년 입니다</p>
-                        <p>당신의 소중한 가족 저한테 맡겨주세요</p>
-                    </div>
-                </div>
+            <div class="text_box">
+                <p>안녕하세요 저는 누구입니다</p>
+                <p>저의 경력은 강아지 키우기 몇년</p>
+                <p>고양이 키우기 몇년 입니다</p>
+                <p>당신의 소중한 가족 저한테 맡겨주세요</p>
             </div>
         </div>
-        </form>
+        <div class="teacher" onclick="showBigImage('/dist/image/강아지3.jpg', '안녕하세요 저는 누구입니다<br>저의 경력은 강아지 키우기 몇년<br>고양이 키우기 몇년 입니다<br>당신의 소중한 가족 저한테 맡겨주세요')">
+            <div class="image_box">
+                <img class="image" th:src="@{/dist/image/강아지3.jpg}">
+            </div>
+            <div class="text_box">
+                <p>안녕하세요 저는 누구입니다</p>
+                <p>저의 경력은 강아지 키우기 몇년</p>
+                <p>고양이 키우기 몇년 입니다</p>
+                <p>당신의 소중한 가족 저한테 맡겨주세요</p>
+            </div>
+        </div>
+        <div class="teacher" onclick="showBigImage('/dist/image/강아지3.jpg', '안녕하세요 저는 누구입니다<br>저의 경력은 강아지 키우기 몇년<br>고양이 키우기 몇년 입니다<br>당신의 소중한 가족 저한테 맡겨주세요')">
+            <div class="image_box">
+                <img class="image" th:src="@{/dist/image/강아지3.jpg}">
+            </div>
+            <div class="text_box">
+                <p>안녕하세요 저는 누구입니다</p>
+                <p>저의 경력은 강아지 키우기 몇년</p>
+                <p>고양이 키우기 몇년 입니다</p>
+                <p>당신의 소중한 가족 저한테 맡겨주세요</p>
+            </div>
+        </div>
+        <div class="teacher" onclick="showBigImage('/dist/image/강아지3.jpg', '안녕하세요 저는 누구입니다<br>저의 경력은 강아지 키우기 몇년<br>고양이 키우기 몇년 입니다<br>당신의 소중한 가족 저한테 맡겨주세요')">
+            <div class="image_box">
+                <img class="image" th:src="@{/dist/image/강아지3.jpg}">
+            </div>
+            <div class="text_box">
+                <p>안녕하세요 저는 누구입니다</p>
+                <p>저의 경력은 강아지 키우기 몇년</p>
+                <p>고양이 키우기 몇년 입니다</p>
+                <p>당신의 소중한 가족 저한테 맡겨주세요</p>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
     </th:block>
 </th:block>
 </html>
