--- a/www/www/src/main/resources/templates/index.html
+++ b/www/www/src/main/resources/templates/index.html
@@ -2,12 +2,16 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{layout :: setFragment(~{this :: content})}">
     <th:block th:fragment="content">
-        <div class="slide">
-            <div class="slide-item item1"></div>
-            <div class="slide-item item2"></div>
-            <div class="slide-item item3"></div>
-            <div class="slide-item item4"></div>
-            <div class="slide-item item5"></div>
+
+        <div class="container-sm">
+            <div class="slide">
+                <div class="slide-item item1"></div>
+                <div class="slide-item item2"></div>
+                <div class="slide-item item3"></div>
+                <div class="slide-item item4"></div>
+                <div class="slide-item item5"></div>
+            </div>
         </div>
+
     </th:block>
 </th:block>
