--- a/www/www/src/main/resources/templates/layout.html
+++ b/www/www/src/main/resources/templates/layout.html
@@ -12,6 +12,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
         <link rel="stylesheet" th:href="@{/dist/css/header.css}">
         <link rel="stylesheet" th:href="@{/dist/css/footer.css}">
+        <link rel="stylesheet" th:href="@{/dist/css/reset.css}">
 
     </head>
 
@@ -41,7 +42,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
         <div class="group1">
             <ul>
                 <li><a href="">산책</a></li>
-                <li><a href="">케어서비스</a></li>
+                <li><a href="/reservation/select-services">케어서비스</a></li>
                 <li><a href="">훈련서비스</a></li>
                 <li><a href="">정기케어</a></li>
                 <li><a href="">스토어</a></li>
