05/31, 글쓰기 데이터베이스

--- a/www/www/src/main/resources/templates/layout.html
+++ b/www/www/src/main/resources/templates/layout.html
@@ -40,7 +40,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
     <div class="nav">
         <div class="group1">
             <ul>
-                <li><a th:href="@{/test/information}">산책</a></li>
+                <li><a th:href="@{/#}">산책</a></li>
                 <li><a th:href="@{/#}">케어서비스</a></li>
                 <li><a href="#">훈련서비스</a></li>
                 <li><a href="#">정기케어</a></li>
