--- a/www/www/src/main/resources/templates/community/announcement.html
+++ b/www/www/src/main/resources/templates/community/announcement.html
@@ -5,7 +5,6 @@
         <head>
             <link rel="stylesheet" th:href="@{/dist/css/reset.css}">
             <link rel="stylesheet" th:href="@{/dist/css/announcement.css}">
-            <script th:src="@{/js/announcement.js}"></script>
         </head>
         <body>
         <div class="container">
@@ -87,7 +86,7 @@
                 <p>이름</p>
                 <input type="text" id="name">
                 <p>연락처</p>
-                <input type="number" id="number">
+                <input type="text" id="number">
                 <p>내용</p>
                 <textarea class="text_area"></textarea>
                 <button type="button" id="button">전송</button>
