--- a/www/www/src/main/resources/templates/layout.html
+++ b/www/www/src/main/resources/templates/layout.html
@@ -21,9 +21,6 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
         <link rel="stylesheet" th:href="@{/dist/css/content-top.css}"> <!-- content-top area(컨텐트 영역 탑(제목/부제) 관련) -->
         <link rel="stylesheet" th:href="@{/dist/css/mypage.css}">
 
-        <!-- css 클래스명 중복 이슈로 주석처리  -->
-        <link rel="stylesheet" th:href="@{/dist/css/teacher.css}">
-
         <!-- 폰트 -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -94,7 +91,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
                 <div class="menu_list">
                     <ul>
                         <li><a th:href="@{/test/teacher}">산책</a></li>
-                        <li><a th:href="@{/test/pay}">케어서비스</a></li>
+                        <li><a th:href="@{/reservation/select-services}">케어서비스</a></li>
                         <li><a href="">훈련서비스</a></li>
                         <li><a href="">정기케어</a></li>
                         <li><a href="">스토어</a></li>
