--- a/www/www/src/main/resources/templates/teacher.html
+++ b/www/www/src/main/resources/templates/teacher.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:replace="~{layout::setFragment(~{this::content})}">
     <th:block th:fragment="content">
-
+        <link rel="stylesheet" th:href="@{/dist/css/teacher.css}">
         <main>
             <!-- content-top 영역 -->
             <div class="content-top">
