--- a/www/www/src/main/resources/templates/layout.html
+++ b/www/www/src/main/resources/templates/layout.html
@@ -15,11 +15,11 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
         <!-- 사용자정의 -->
         <link rel="stylesheet" th:href="@{/dist/css/layout.css}">
+
         <link rel="stylesheet" th:href="@{/dist/css/register(policy)+login.css}">
         <link rel="stylesheet" th:href="@{/dist/css/content-top.css}"> <!-- content-top area(컨텐트 영역 탑(제목/부제) 관련) -->
         <link rel="stylesheet" th:href="@{/dist/css/mypage.css}">
-
-        <!-- css 클래스명 중복 이슈로 주석처리  -->
+        <link rel="stylesheet" th:href="@{/dist/css/announcement.css}">
         <link rel="stylesheet" th:href="@{/dist/css/teacher.css}">
 
         <!-- 폰트 -->
