--- a/www/www/src/main/resources/templates/member/register.html
+++ b/www/www/src/main/resources/templates/member/register.html
@@ -29,6 +29,12 @@
                                 <input type="password" class="form-control" name="check_pwd" id="sign_check_pwd" placeholder="비밀번호 확인">
                                 <div class="mismatch-message hide"><strong style="color: red;">비밀번호가 일치하지 않습니다.</strong></div>
                             </div>
+
+                            <div class="mb-3">
+                                <label for="email" class="form-label"><strong>이메일</strong></label>
+                                <input type="email" class="form-control" name="email" id="email" placeholder="이메일을 입력하세요">
+                            </div>
+
                             <div class="mb-3">
                                 <label for="name" class="form-label"><strong>이름</strong></label>
                                 <input type="text" class="form-control" name="name" id="name" placeholder="이름을 입력하세요">
