--- a/www/www/src/main/resources/templates/layout.html
+++ b/www/www/src/main/resources/templates/layout.html
@@ -14,7 +14,6 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
         <script th:src="@{/dist/js/bootstrap.bundle.min.js}"></script>
 
 
-
         <!-- 사용자정의 -->
         <link rel="stylesheet" th:href="@{/dist/css/layout.css}">
         <link rel="stylesheet" th:href="@{/dist/css/register(policy)+login.css}">
@@ -62,7 +61,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
                             <!-- 관리자 페이지 -->
                             <div class="admin_page" sec:authorize="hasAuthority('ROLE_ADMIN')">
                                 <div class="layout_icon">
-                                    <a class="admin_color" th:href="@{/member/admin_page}">
+                                    <a class="admin_color" th:href="@{/admin/admin_main_index}">
 <!--                                        <svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-cone-striped" viewBox="0 0 16 16">-->
 <!--                                            <path d="m9.97 4.88.953 3.811C10.159 8.878 9.14 9 8 9s-2.158-.122-2.923-.309L6.03 4.88C6.635 4.957 7.3 5 8 5s1.365-.043 1.97-.12m-.245-.978L8.97.88C8.718-.13 7.282-.13 7.03.88L6.275 3.9C6.8 3.965 7.382 4 8 4s1.2-.036 1.725-.098m4.396 8.613a.5.5 0 0 1 .037.96l-6 2a.5.5 0 0 1-.316 0l-6-2a.5.5 0 0 1 .037-.96l2.391-.598.565-2.257c.862.212 1.964.339 3.165.339s2.303-.127 3.165-.339l.565 2.257z"/>-->
 <!--                                        </svg>-->
@@ -74,7 +73,7 @@ xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
                             <!-- 장바구니 -->
                             <div th:if="${!#authorization.expression('hasAuthority(''ROLE_ADMIN'')')}">
                                 <div class="layout_icon" sec:authorize="isAuthenticated()">
-                                    <a th:href="@{/member/myPage_basket}">
+                                    <a th:href="@{/}">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-cart4" viewBox="0 0 16 16">
                                             <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5M3.14 5l.5 2H5V5zM6 5v2h2V5zm3 0v2h2V5zm3 0v2h1.36l.5-2zm1.11 3H12v2h.61zM11 8H9v2h2zM8 8H6v2h2zM5 8H3.89l.5 2H5zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0m9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2m-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0"/>
                                         </svg>
