--- a/www/www/src/main/resources/templates/member/login.html
+++ b/www/www/src/main/resources/templates/member/login.html
@@ -7,6 +7,26 @@
             <div class="content-bg loginPage">
                 <div class="container-sm login_form">
                     <h3 class="content-titleName"><strong>Login</strong></h3>
+
+                    <!-- 소셜로그인 -->
+                    <div class="mb-3 socialLogin_kakao">
+                        <a th:href="@{https://kauth.kakao.com/oauth/authorize?client_id=a45623b5d24ad2311125ad4a2dbd59db&redirect_uri=http://localhost:8090/member/auth/kakao/callback&response_type=code}">
+                            <img th:src="@{/dist/image/kakao_login_medium_wide.png}" alt="카카오 로그인 버튼" />
+                        </a>
+                    </div>
+
+
+
+
+
+
+                    <div class="login_text_line">
+                        <div class="login_border left"></div>
+                        또는
+                        <div class="login_border right"></div>
+                    </div>
+
+
                     <form action="/member/login" method="post">
                         <div class="mb-3">
                             <label for="id" class="form-label">아이디</label>
@@ -27,10 +47,45 @@
                             <a th:href="@{/member/registerpolicy}"><button type="button" class="btn btn-secondary">회원가입</button></a>
                         </div>
                     </form>
+
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-center findInfo">
+<!--                        <a th:href="@{/member/findId}">-->
+<!--                            <button type="button" class="btn btn-link findInfoBtn" data-bs-toggle="modal" data-bs-target="#findPw">아이디를 잊으셨나요?</button>-->
+<!--                        </a>-->
+
+                        <a th:href="@{/member/findPw}">
+                            <button type="button" class="btn btn-link findInfoBtn" data-bs-toggle="modal" data-bs-target="#findPw">비밀번호를 잊으셨나요?</button>
+                        </a>
+                    </div>
+
+
                 </div>
             </div>
         </main>
 
+        <script th:src="@{https//developers.kakao.com/sdk/js/kakao.js}"></script>
+
+        <script>
+
+            window.Kakao.init("d2c7fecc781fb6ebb1d39d7f476cd549");
+
+            function kakaoLogin(){
+                window.Kakao.Auth.login({
+                    scope:'profile_nickname',
+                    success: function(authObj) {
+                        consolo.log(authObj);
+                        window.Kakao.API.request({
+                            url:'/v2/user/me',
+                            success: res => {
+                                const kakao_account = res.kakao_account;
+                                console.log(kakao_account);
+                            }
+                        });
+                    }
+                });
+            }
+
+        </script>
 
     </th:block>
 </th:block>
