--- a/www/www/src/main/resources/templates/member/myPage_ask.html
+++ b/www/www/src/main/resources/templates/member/myPage_ask.html
@@ -46,18 +46,16 @@
                                                 <path d="M3.1.7a.5.5 0 0 1 .4-.2h9a.5.5 0 0 1 .4.2l2.976 3.974c.149.185.156.45.01.644L8.4 15.3a.5.5 0 0 1-.8 0L.1 5.3a.5.5 0 0 1 0-.6zm11.386 3.785-1.806-2.41-.776 2.413zm-3.633.004.961-2.989H4.186l.963 2.995zM5.47 5.495 8 13.366l2.532-7.876zm-1.371-.999-.78-2.422-1.818 2.425zM1.499 5.5l5.113 6.817-2.192-6.82zm7.889 6.817 5.123-6.83-2.928.002z"/>
                                             </svg>
                                         </div>
-                                        <div class="col name_area">
-                                            <!-- 이름 가져오기 -->
-                                            <span><h6>OO님　 안녕하세요.</h6></span>
-                                            <div class="purchase_amount">
-                                                <!-- 금액 가져오기 -->
-                                                구매금액 : 0 원
-                                            </div>
+                                        <div class="col memberInfo_area">
+                                            <span class="member_name"><h5>[[${auth.mvo.id}]]　님　안녕하세요</h5></span>
+                                            <span class="purchase_amount">
+                                                구매금액 : 100,000,000 원
+                                            </span>
                                         </div>
                                         <div class="col view_point">
                                             <a>
                                                 <h6>적립금</h6>
-                                                <span><strong>0 점</strong></span>
+                                                <span><strong>12456 점</strong></span>
                                             </a>
                                         </div>
                                     </div>
@@ -74,22 +72,64 @@
                                 </div>
                                 <div class="myPage_mainContent_detail">
 
+                                    <form action="/member/myPage_ask" method="post">
+                                        <div class="row mb-3">
+                                            <label for="id" class="col-sm-2 col-form-label"><strong>아이디</strong></label>
+                                            <div class="col-sm-10">
+                                                <input type="text" class="form-control" id="id" th:value="${auth.mvo.id}">
+                                            </div>
+                                        </div>
+                                        <div class="row mb-3">
+                                            <label for="ask_email" class="col-sm-2 col-form-label"><strong>이메일</strong></label>
+                                            <div class="col-sm-10">
+                                                <input type="email" class="form-control" id="ask_email" th:value="${auth.mvo.email}">
+                                            </div>
+                                        </div>
+                                        <fieldset class="row mb-3">
+                                            <legend class="col-form-label col-sm-2 pt-0"><strong>문의 유형</strong></legend>
+                                            <div class="col-sm-10">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="radio" name="ask_type" id="ask_type1" value="ask_type1" checked>
+                                                    <label class="form-check-label" for="ask_type1">
+                                                        예약 문의
+                                                    </label>
+                                                </div>
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="radio" name="ask_type" id="ask_type2" value="ask_type2">
+                                                    <label class="form-check-label" for="ask_type2">
+                                                        계정 문의
+                                                    </label>
+                                                </div>
+                                                <div class="form-check disabled">
+                                                    <input class="form-check-input" type="radio" name="ask_type" id="ask_type3" value="ask_type3">
+                                                    <label class="form-check-label" for="ask_type3">
+                                                        기타 문의
+                                                    </label>
+                                                </div>
+                                            </div>
+                                        </fieldset>
 
-<!--                                        <form action="/member/myPage_ask" method="post">-->
-<!--                                            <div class="ask_container">-->
-<!--                                            <div class="ask_registerButton">-->
-<!--                                                <button type="submit" class="btn btn-secondary" id="signInBtn">글쓰기</button>-->
-<!--                                            </div>-->
-<!--                                        </form>-->
+                                        <div class="row mb-3">
+                                            <label for="ask_title" class="col-sm-2 col-form-label"><strong>제목</strong></label>
+                                            <div class="col-sm-10">
+                                                <input type="text" class="form-control" id="ask_title" placeholder="제목을 입력해주세요">
+                                            </div>
+                                        </div>
 
+                                        <div class="row mb-3">
+                                            <label for="ask_content" class="col-sm-2 col-form-label"><strong>문의 내용</strong></label>
+                                            <div class="col-sm-10">
+                                                <textarea class="form-control" id="ask_content"
+                                                          placeholder="문의하실 내용을 입력해주세요
 
-
-
-
-
-
-
-
+* 개인정보보호를 위해 문의 내용에는 휴대폰 번호 등 개인정보 입력을 지양하여 주시기 바랍니다.
+                                                          "></textarea>
+                                            </div>
+                                        </div>
+                                        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                                            <button type="submit" class="btn btn-secondary askBtn" id="signInBtn" disabled="true">문의하기</button>
+                                        </div>
+                                    </form>
                                 </div>
                             </div>
                         </div>
